cabal-version:   3.4
name:            djot-hs
version:         0.1.0.0

-- synopsis:
-- description:
license:         Apache-2.0
license-file:    LICENSE
author:          Hécate
maintainer:      hecate+github@glitchbra.in
category:        Parsers
build-type:      Simple
extra-doc-files: CHANGELOG.md

tested-with: GHC == 9.4.5

common extensions
  default-extensions:
    NoStarIsType
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    QuasiQuotes
    RecordWildCards
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language:   GHC2021

common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -funbox-strict-fields
    -Wunused-packages

library
  import:             ghc-options
  import:             extensions

  -- cabal-fmt: expand ./src
  exposed-modules:
    Djot.AST
    Djot.Lexer
    MyLib

  build-tool-depends: alex:alex ^>=3.2
  build-depends:
    , array
    , base        ^>=4.17.0.0
    , bytestring
    , containers
    , text
    , vector

  hs-source-dirs:     src
  default-language:   GHC2021

test-suite djot-hs-test
  import:         ghc-options
  import:         extensions
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules:  Test.Lexer
  main-is:        Main.hs
  build-depends:
    , base         ^>=4.17.0.0
    , djot-hs
    , tasty
    , tasty-hunit
